--- a/pages/Ambienta.html
+++ b/pages/Ambienta.html
@@ -5,38 +5,47 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Horizonte Inmobiliario</title>
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/all.css">
+        <link rel="stylesheet" href="../css/all.min.css">
     </head>
     <body>
         <header class="header">
-            <a class="logo" href="../index.html"><img class="logo" src="../assets/images/Untitled.png" alt="logo tu hogar"></a>
-            <nav class="navegacion">
-                <ul>
-                    <li class="listaitem"><a class="anclasNav" href="../index.html">Inicio</a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Descubre.html">Descubre </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="#">Ambienta </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Nosotros.html">Nosotros </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Contacto.html">Contacto </a> </li>
-
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="logo" href="../index.html"><img class="logo" src="../assets/images/Untitled.png" alt="logo tu hogar"></a>
+                <div class="container-fluid color__nav">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Descubre.html">Descubre</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Ambienta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <main class="main">
             <!-- Aca iran imagenes para ambientar (por ej muebles, plantas, etc) y ademas un texto explicativo -->
             <h1 class="h1s">Ambienta la casa de tus sueños y transformala en tu hogar</h1>
-            <br>
             <p>Está demostrado que para transformar una casa en un hogar debe estar bien amueblada, pero además es importante tener plantas, ya que estas ayudan a purificar el aire y aportan comodidad</p>
-            <br>
-            <br>
             <img class="ambientar"src="../assets/images/ambientar 1.jpg" alt="">
             <img class="ambientar" src="../assets/images/imagen provisoria.jpg" alt="1">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste quasi rerum vero nobis aut fugiat perferendis, iure reiciendis quae ex amet! Sit necessitatibus saepe minima labore praesentium, amet placeat!</p>
-
         </main>
         <footer class="footer">
-            <p class="copyright">© 2023-2023 Horizonte Inmobiliario </p>
+            <nav class="navRedes">
+                <ul>
+                    <li class="liRedes"><a class="redesSociales" target="_blank" href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+                    <li class="liRedes"><a class="redesSociales" target="_blank" href="https://www.facebook.com"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
+                    <li class="liRedes"><a class="redesSociales" target="_blank" href="https://www.twitter.com"><i class="fa-brands fa-twitter fa-2x"></i></a></li>
+                </ul>
+            </nav>
+            <p class="copyright">© 2023 Horizonte Inmobiliario</p>
         </footer>
+        <script src="../js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
