--- a/pages/Descubre.html
+++ b/pages/Descubre.html
@@ -5,34 +5,106 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Horizonte Inmobiliario</title>
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/all.css">
+        <link rel="stylesheet" href="../css/all.min.css">
     </head>
     <body>
         <header class="header">
-            <a class="logo" href="../index.html"><img class="logo" src="../assets/images/Untitled.png" alt="logo tu hogar"></a>
-            <nav class="navegacion">
-                <ul>
-                    <li class="listaitem"><a class="anclasNav" href="../index.html">Inicio</a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="#">Descubre </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Ambienta.html">Ambienta </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Nosotros.html">Nosotros </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Contacto.html">Contacto </a> </li>
-
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="logo" href="../index.html"><img class="logo" src="../assets/images/Untitled.png" alt="logo tu hogar"></a>
+                <div class="container-fluid color__nav">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Descubre</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Ambienta.html">Ambienta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <main class="main">
             <h1 class="h1s">Encuentra la casa de tus sueños</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste quasi rerum vero nobis aut fugiat perferendis, iure reiciendis quae ex amet! Sit necessitatibus saepe minima labore praesentium, amet placeat!</p>
-            <img class="preview" src="../assets/images/222.jpg" alt="casa 2">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non vel, dolorum necessitatibus debitis ex tempora fugit quis officia rerum fuga esse impedit laboriosam, eveniet quas sint, aut officiis soluta obcaecati.</p>
-            <img class="preview" src="../assets/images/333.jpg" alt="casa 3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card" style="width: 20rem;">
+                            <img class="card-img-top" src="../assets/images/1.jpg" alt="casa1">
+                            <div class="card-body">
+                                <h5 class="card-title">Casa con vistas</h5>
+                                <p class="card-text">Increible casa con vistas al lago Kajal</p>
+                                <a href="./casas/casa1.html" class="btn btn-primary">Abrir publicación</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card" style="width: 20rem;">
+                            <img class="card-img-top" src="../assets/images/2.jpg" alt="casa2">
+                            <div class="card-body">
+                                <h5 class="card-title">Casa con 2 garajes</h5>
+                                <p class="card-text">Increible casa con espacio para 6 autos</p>
+                                <a href="./casas/casa2.html" class="btn btn-primary">Abrir publicación</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card" style="width: 20rem;">
+                            <img class="card-img-top" src="../assets/images/3.jpg" alt="casa3">
+                            <div class="card-body">
+                                <h5 class="card-title">Casa futurista</h5>
+                                <p class="card-text">Increible casa futurista, equipada con paneles solares</p>
+                                <a href="./casas/casa3.html" class="btn btn-primary">Abrir publicación</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card" style="width: 20rem;">
+                            <img class="card-img-top" src="../assets/images/4.jpg" alt="casa4">
+                            <div class="card-body">
+                                <h5 class="card-title">Casa en el bosque</h5>
+                                <p class="card-text">Increible casa ubicada en el bosque Lorem</p>
+                                <a href="./casas/casa4.html" class="btn btn-primary">Abrir publicación</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card" style="width: 20rem;">
+                            <img class="card-img-top" src="../assets/images/5.jpg" alt="casa5">
+                            <div class="card-body">
+                                <h5 class="card-title">Casa en barrio privado</h5>
+                                <p class="card-text">Increible casa con un diseño simple pero llamativo</p>
+                                <a href="./casas/casa5.html" class="btn btn-primary">Abrir publicación</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card" style="width: 20rem;">
+                            <img class="card-img-top" src="../assets/images/6.jpg" alt="casa6">
+                            <div class="card-body">
+                                <h5 class="card-title">Casa en la ciudad</h5>
+                                <p class="card-text">Casa discreta pero acogedora</p>
+                                <a href="./casas/casa6.html" class="btn btn-primary">Abrir publicación</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div> 
         </main>
         <footer class="footer">
-            <a class="redesSociales" href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2x fa-fw"></i></a>
-            <p class="copyright">© 2023-2023 Horizonte Inmobiliario </p>
+            <nav class="navRedes">
+                <ul>
+                    <li class="liRedes"><a class="redesSociales" target="_blank" href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+                    <li class="liRedes"><a class="redesSociales" target="_blank" href="https://www.facebook.com"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
+                    <li class="liRedes"><a class="redesSociales" target="_blank" href="https://www.twitter.com"><i class="fa-brands fa-twitter fa-2x"></i></a></li>
+                </ul>
+            </nav>
+            <p class="copyright">© 2023 Horizonte Inmobiliario</p>
         </footer>
+        <script src="../js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
