--- a/pages/Ambienta.html
+++ b/pages/Ambienta.html
@@ -4,39 +4,52 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Horizonte Inmobiliario</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/all.css">
+        <meta name="description" content="Ambienta tu casa y transformala en el hogar de tus sueños, aprende sobre las posibilidades que existen para decorar, y adentrate en el mundo de la comodidad">
+        <meta name="keywords" content="ambientar, ambienta, horizonte, inmobiliario, hogar, casa, muebles, plantas, comodidad">
+        <title>Ambienta - Horizonte Inmobiliario</title>
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="../css/all.min.css">
     </head>
     <body>
         <header class="header">
             <a class="logo" href="../index.html"><img class="logo" src="../assets/images/Untitled.png" alt="logo tu hogar"></a>
-            <nav class="navegacion">
-                <ul>
-                    <li class="listaitem"><a class="anclasNav" href="../index.html">Inicio</a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Descubre.html">Descubre </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="#">Ambienta </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Nosotros.html">Nosotros </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="Contacto.html">Contacto </a> </li>
-
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+                <div class="container-fluid color__nav">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="div__nav collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Descubre.html">Descubre</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Ambienta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
-        <main class="main">
-            <!-- Aca iran imagenes para ambientar (por ej muebles, plantas, etc) y ademas un texto explicativo -->
+        <main class="main__ambienta">
+            <!-- Imagenes para ambientar (por ej muebles, plantas, etc) y texto explicativo -->
             <h1 class="h1s">Ambienta la casa de tus sueños y transformala en tu hogar</h1>
-            <br>
-            <p>Está demostrado que para transformar una casa en un hogar debe estar bien amueblada, pero además es importante tener plantas, ya que estas ayudan a purificar el aire y aportan comodidad</p>
-            <br>
-            <br>
-            <img class="ambientar"src="../assets/images/ambientar 1.jpg" alt="">
-            <img class="ambientar" src="../assets/images/imagen provisoria.jpg" alt="1">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste quasi rerum vero nobis aut fugiat perferendis, iure reiciendis quae ex amet! Sit necessitatibus saepe minima labore praesentium, amet placeat!</p>
+            <p class="p">Está demostrado que para transformar una casa es indispensable tener plantas, ya que estas ayudan a purificar el aire y aportan comodidad. Pero además estas tomarían el rol de una mascota ya que debes dedicarles tiempo, debes regarlas, etc. Eso las convierte en una forma de escapar de los problemas del dia a dia y también, puede ser una manera de distraerse.</p>
+            <img class="ambientar" src="../assets/images/plantas.jpg" alt="plantas">
+            <p class="p">Pero también, si de comodidad se habla, está claro que una buena elección de muebles es una solución a la forma en que uno ve la casa. Ya que estos mismos bien acomodados nos dan una perspectiva de la casa totalmente diferente, la cual nos hace sentir a gusto.</p>
+            <img class="ambientar" src="../assets/images/muebles.jpg" alt="muebles">
 
         </main>
         <footer class="footer">
-            <p class="copyright">© 2023-2023 Horizonte Inmobiliario </p>
+            <nav class="navRedes">
+                <ul>
+                    <li class="liRedes__instagram"><a class="instagram" target="_blank" href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+                    <li class="liRedes__facebook"><a class="facebook" target="_blank" href="https://www.facebook.com"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
+                    <li class="liRedes__twitter"><a class="twitter" target="_blank" href="https://www.twitter.com"><i class="fa-brands fa-twitter fa-2x"></i></a></li>
+                </ul>
+            </nav>
+            <p class="copyright">© 2023-2023 Horizonte Inmobiliario</p>
         </footer>
+        <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
