--- a/index.html
+++ b/index.html
@@ -4,25 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
-        <title>Horizonte Inmobiliario</title>
-        <link rel="stylesheet" href="./css/style.css">
-        <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/all.css">
-    </head>
-    <body>
-        <header class="header">
-            <a class="logo" href="index.html"><img class="logo" src="assets/images/Untitled.png" alt="logo tu hogar"></a>
-            <nav class="navegacion">
-                <ul>
-                    <li class="listaitem"><a class="anclasNav" href="#">Inicio</a></li>
-                    <li class="listaitem"><a class="anclasNav" href="pages/Descubre.html">Descubre </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="pages/Ambienta.html">Ambienta </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="pages/Nosotros.html">Nosotros </a> </li>
-                    <li class="listaitem"><a class="anclasNav" href="pages/Contacto.html">Contacto </a> </li>
-
-                </ul>
-=======
         <meta name="description" content="Horizonte Inmobiliario es una empresa que se dedica a satisfacer las necesidades de las personas que buscan un hogar seguro y cómodo por sobre todo">
         <meta name="keywords" content="Horizonte Inmobiliario, horizonte, inmobiliario, hogar, casa, comprar casa">
         <title>Horizonte Inmobiliario - Inicio</title>
@@ -48,31 +29,11 @@
                         </ul>
                     </div>
                 </div>
->>>>>>> Stashed changes
             </nav>
         </header>
-        <main class="main">
+        <main class="main__index">
             <div>
                 <h1 class="h1s">Busca y encuentra</h1>
-<<<<<<< Updated upstream
-                <br>
-                <h2 class="h2">¿Que esperas para hacerte con alguna de estas?</h2>
-                <br>
-                <br>
-                <br>
-                <p>Preview casa2</p>
-                <br>
-                <br>
-                <br>
-                <p>Preview casa3</p>
-                <br>
-                <br>
-                <br>
-                <p>Preview casa4</p>
-                <br>
-                <br>
-                <br>
-=======
                 <h2 class="h2s">¿Que esperás para hacerte con alguna de estas?</h2>
                 <h3 class="h3s">En Horizonte Inmobiliario encontrarás una amplia variabilidad de casas en las mejores ubicaciones de la ciudad Lorem</h3>
                 <div class="container-fluid">
@@ -105,7 +66,6 @@
                 </div>
                 <h3 class="h3s">Si lo que deseas para comenzar es una casa simple, acogedora y bien ubicada en la ciudad, esta es la mejor opción</h3>
                 <a class="ancla__preview" href="./pages/casas/casa6.html"><img class="preview" src="./assets/images/casa 6 .jpg" alt="casa6"></a>
->>>>>>> Stashed changes
             </div>
         </main>
         <footer class="footer">
