--- a/pages/Descubre.html
+++ b/pages/Descubre.html
@@ -4,12 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
-        <title>Horizonte Inmobiliario</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/all.css">
-=======
         <meta name="description" content="Descubre el sitio más completo que encontrarás, en el que podrás ver y adquirir la casa de tus sueños, segura y equipada">
         <meta name="keywords" content="descubre, encuentra, horizonte, inmobiliario, hogar, casa, soñado, comodo">
         <title>Descubre - Horizonte Inmobiliario</title>
@@ -17,7 +11,6 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
->>>>>>> Stashed changes
     </head>
     <body>
         <header class="header">
@@ -37,14 +30,8 @@
                 </div>
             </nav>
         </header>
-        <main class="main">
+        <main class="main__descubre">
             <h1 class="h1s">Encuentra la casa de tus sueños</h1>
-<<<<<<< Updated upstream
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste quasi rerum vero nobis aut fugiat perferendis, iure reiciendis quae ex amet! Sit necessitatibus saepe minima labore praesentium, amet placeat!</p>
-            <img class="preview" src="../assets/images/222.jpg" alt="casa 2">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non vel, dolorum necessitatibus debitis ex tempora fugit quis officia rerum fuga esse impedit laboriosam, eveniet quas sint, aut officiis soluta obcaecati.</p>
-            <img class="preview" src="../assets/images/333.jpg" alt="casa 3">
-=======
             <div class="container">
                 <div class="row">
                     <div class="centrado col-12 col-md-6 col-lg-4">
@@ -108,7 +95,6 @@
                     </div>
                 </div>
             </div> 
->>>>>>> Stashed changes
         </main>
         <footer class="footer">
             <nav class="navRedes">
