--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -4,12 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
-        <title>Horizonte Inmobiliario</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/all.css">
-=======
         <meta name="description" content="Conoce a cada uno de quienes forman parte de nuestro equipo, horizonte inmobiliario, profundiza tus conocimientos con nuestros expertos">
         <meta name="keywords" content="conocer, equipo, horizonte, inmobiliario, hogar, casa, logistica, trabajo, estrategia">
         <title>Nosotros - Horizonte Inmobiliario</title>
@@ -17,7 +11,6 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
->>>>>>> Stashed changes
     </head>
     <body>
         <header class="header">
@@ -37,32 +30,8 @@
                 </div>
             </nav>
         </header>
-        <main class="main">
+        <main class="main__nosotros">
             <h1 class="h1s">Nosotros</h1>
-<<<<<<< Updated upstream
-            <p>Somos un equipo que trabaja para satisfacer las necesidades de nuestros clientes</p>
-            <p>En nuestro sitio vas a encontrar la casa de tus sueños y la vas a poder transformar a tu gusto y amoldarla para que sea tu hogar soñado</p>
-            <p>Somos los mejores, y cada uno de los integrantes en nuestro equipo es el mejor en lo que hace</p>
-            <div>
-                <h2>¿Deseas conocer a nuestro equipo?</h2>
-                <h3>A continuación, te presentamos a cada uno de nuestros integrantes</h3>
-                <br>
-                <br>
-                <br>
-                <p>Integrante 1</p>
-                <br>
-                <br>
-                <br>  
-                <p>Integrante 2</p>
-                <br>
-                <br>
-                <br>
-                <p>Integrante 3</p>
-                <br>
-                <br>
-                <br>
-                <p>Integrante 4</p>
-=======
             <p class="p">Somos un equipo que trabaja para satisfacer las necesidades de nuestros clientes, ofreciendo casas de todo tipo para que puedas encontrar la tuya.</p>
             <p class="p">En nuestro sitio web la vas a poder transformar a tu gusto y amoldarla para que sea tu hogar soñado. Somos los mejores, y cada uno de los integrantes en nuestro equipo es el mejor en lo que hace.</p>
             <div class="cards__nosotros">
@@ -107,7 +76,6 @@
                         </div>
                     </div>
                 </div>
->>>>>>> Stashed changes
             </div>
         </main>
         <footer class="footer">
