--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -4,12 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
-        <title>Horizonte Inmobiliario</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="https://kit.fontawesome.com/4b8582377d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/all.css">
-=======
         <meta name="description" content="Contáctanos para saber que es lo que deseas y que podamos cumplirlo, si buscabas un lugar para hacerte con la casa de tus sueños, no dudes en contactarnos">
         <meta name="keywords" content="contactanos, contacto, horizonte, inmobiliario, hogar, casa, servicio">
         <title>Contacto - Horizonte Inmobiliario</title>
@@ -17,7 +11,6 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
->>>>>>> Stashed changes
     </head>
     <body>
         <header class="header">
@@ -37,7 +30,7 @@
                 </div>
             </nav>
         </header>
-        <main class="main">
+        <main class="main__contacto">
             <h1 class="h1s">Contacto</h1>
             <h2 class="h2s">Ingresa tus datos para que podamos contactarte</h2>
             <!-- Error 404 -->
@@ -67,15 +60,8 @@
                             <option value="Langreo">Langreo</option>
                             </select>
                     </div>
-<<<<<<< Updated upstream
-                    
-                  
-                    <div>
-                        <input class="botonesForm" type="submit" value="Enviar comentario">
-=======
                     <div class="div__form">
                         <input class="botonesForm" type="submit" value="Enviar">
->>>>>>> Stashed changes
                         <input class="botonesForm" type="reset" value="Limpiar">
                     </div>
                 </div>    
