--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -38,8 +38,8 @@
                 <h2 class="h2s">¿Deseas conocer a nuestro equipo?</h2>
                 <div class="container">
                     <div class="row">
-                        <div class="col-9 col-md-5 col-lg-3">
-                            <div class="card ms-auto" style="width: 15rem;">
+                        <div class="col-10-xs col-9-sm col-md-6 col-lg-3">
+                            <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Ernesto Gomez.jpg" alt="Ernesto">
                                 <div class="card-body">
                                     <h5 class="card-title">Ernesto Gomez</h5>
@@ -47,8 +47,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-9 col-md-5 col-lg-3">
-                            <div class="card ms-auto" style="width: 15rem;">
+                        <div class="col-10-xs col-9-sm col-md-6 col-lg-3">
+                            <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Daniela Fernandez.jpg" alt="Daniela">
                                 <div class="card-body">
                                     <h5 class="card-title">Daniela Fernandez</h5>
@@ -56,8 +56,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-9 col-md-5 col-lg-3">
-                            <div class="card ms-auto" style="width: 15rem;">
+                        <div class="col-10-xs col-9-sm col-md-6 col-lg-3">
+                            <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Juan Lopez.jpg" alt="Juan">
                                 <div class="card-body">
                                     <h5 class="card-title">Juan Lopez</h5>
@@ -65,8 +65,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-9 col-md-5 col-lg-3">
-                            <div class="card ms-auto" style="width: 15rem;">
+                        <div class="col-10-xs col-9-sm col-md-6 col-lg-3">
+                            <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Rita Baez.jpg" alt="Rita">
                                 <div class="card-body">
                                     <h5 class="card-title">Rita Baez</h5>
