--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <main class="main__index">
             <div>
                 <h1 class="h1s">Busca y encuentra</h1>
-                <h2 class="h2s">¿Que esperás para hacerte con alguna de estas?</h2>
-                <h3 class="h3s">En Horizonte Inmobiliario encontrarás una amplia variabilidad de casas en las mejores ubicaciones de la ciudad Lorem</h3>
+                <h2 class="h2s">¿Que esperás para hacerte con alguna de estas propiedades?</h2>
+                <h3 class="h3s">En Horizonte Inmobiliario tendrás una amplia selección de casas en las mejores ubicaciones de la ciudad Lorem para que puedas encontrar la tuya.</h3>
                 <div class="container-fluid">
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
