--- a/pages/Ambienta.html
+++ b/pages/Ambienta.html
@@ -33,7 +33,7 @@
         <main class="main__ambienta">
             <!-- Imagenes para ambientar (por ej muebles, plantas, etc) y texto explicativo -->
             <h1 class="h1s">Ambienta la casa de tus sueños y transformala en tu hogar</h1>
-            <p class="p">Está demostrado que para transformar una casa es indispensable tener plantas, ya que estas ayudan a purificar el aire y aportan comodidad. Pero además estas tomarían el rol de una mascota ya que debes dedicarles tiempo, debes regarlas, etc. Eso las convierte en una forma de escapar de los problemas del dia a dia y también, puede ser una manera de distraerse.</p>
+            <p class="p">Está demostrado que para transformar una casa es indispensable tener plantas, ya que estas ayudan a purificar el aire y aportan comodidad. Pero además estas tomarían el rol de una mascota ya que debes dedicarles tiempo, debes regarlas, etc. Eso las convierte en una forma de escapar de los problemas del día a día y también, puede ser una manera de distraerse.</p>
             <img class="ambientar" src="../assets/images/plantas.jpg" alt="plantas">
             <p class="p">Pero también, si de comodidad se habla, está claro que una buena elección de muebles es una solución a la forma en que uno ve la casa. Ya que estos mismos bien acomodados nos dan una perspectiva de la casa totalmente diferente, la cual nos hace sentir a gusto.</p>
             <img class="ambientar" src="../assets/images/muebles.jpg" alt="muebles">
